--- a/Project/seat.css
+++ b/Project/seat.css
@@ -1,3 +1,14 @@
+
+.appBackground {
+   
+    background-image: url("cinema.png");
+	width: 100%;
+	height: 140vh;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	background-attachment: fixed;
+  }
 .seatSelection {
   text-align: center;
   padding: 5px;
@@ -8,25 +19,30 @@
 .seatNumber {
 	display: inline;
 	padding: 10px;
-	background-color: #5c86eb;
+	background-color: #267082;
 	color: #FFF;
 	border-radius: 5px;
 	cursor: default;
 	height: 25px;
-	width: 25px;
+	width:  25px;
 	line-height: 25px;
 	text-align: center;
+	cursor: pointer;
  }
 
-.seatRow {padding: 10px;}
+.seatRow {
+	padding: 10px;
+}
 
 .seatSelected {
-	background-color: lightgreen;
+	background-color: #FFB936;
 	color: black;
  }
 
 
-.seatUnavailable {background-color: gray;}
+.seatUnavailable {
+	background-color: #63130E;
+	cursor: no-drop;}
 
 .seatRowNumber {
 	clear: none;
