--- a/Project/formScreen.css
+++ b/Project/formScreen.css
@@ -1,5 +1,5 @@
 .form-style-5{
-    max-width: 500px;
+  max-width: 500px;
 	padding: 5px 10px;
 	background: #000000;
 	margin: 10px auto;
@@ -99,7 +99,7 @@
 body{
     font-family: Calibri, Helvetica, sans-serif;
     position:  relative;
-    font-size: 16px;
+    font-size: 100%;
   }
   .modal {
     display: none; 
@@ -136,7 +136,8 @@ body{
     margin: 15% auto; 
     padding: 20px;
     border: 1px solid #888;
-    width: 55%; 
+    width: auto;
+    position: center; 
   }
   /* Kapat Düğmesi */
   .close {
@@ -164,10 +165,13 @@ body{
     cursor: pointer;
   }
   
-  table { border-collapse: collapse; }
+  table { 
+        border-collapse: collapse; 
+       margin-left: auto;
+       margin-right: auto;}
   th { color: rgb(1, 1, 2); padding: 5px 5px; }
   td { 
       border: 3px solid rgb(0, 0, 0); 
       padding: 5px 5px; 
-      text-align: center; 
+      text-align: left; 
    }
